# coca-frequency-list

./: .gitignore  Cargo.toml  justfile  readme.md  script.nu
data/: readme.md
src/: error.rs  lib.rs  query.rs
