[package]
name = "coca_frequency_list"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "36.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.1", features = ["derive"]}
calamine = "0.24.0"
thiserror = "1.0"
csv = "1.3.0"
indexmap = "2.2.3"